--- a/indextoslides2.qmd
+++ b/indextoslides2.qmd
@@ -863,30 +863,32 @@ This paper shows various cross-validation techniques that can be used
 for modeling validation, including single hold-out, 5 & 10 k-folds,
 leave-one-out, and Monte Carlo cross-validation.
 
-While the researchers that provided the dataset found that survival of
-heart attack patients can be predicted using only serum creatinine and
-ejection fraction as predictor variables. The logistic regression
-analysis we conducted using various cross-validation techniques has
-shown that the full model (which includes all predictor variables within
+  - The full models (which includes all predictor variables within
 the dataset) tends to have lower mean squared error (MSE) and higher
-Area under the Curve (AUC) values after testing. This essentially means
-the full model is more robust with predictive ability compared to the
-reduced model. That being said, the difference in MSEs between the two
-models is marginal, however, the full model by technicality does have
+Area under the Curve (AUC) values after testing.
+  - This essentially means the full model is more robust with predictive
+ability compared to the reduced model. 
+  - However, the difference in MSEs between the two
+models is marginal, but the full model by technicality does have
 slightly more predictive ability. It also has a better ability to
 distinguish between classes, whether or not the patient died within
 their follow-up period.
 
-The marginal difference between models supports the argument made by the
+## Conclusion (cont.)
+
+  - The marginal difference between models supports the argument made by the
 researchers because the model with two predictor variables and the model
 with twelve predictor variables produced small differences in MSEs as
 seen in the analysis above; models with less predictor variables are
-typically preferred in statistical analysis. Since the AUC values did
+typically preferred in statistical analysis.
+  - Since the AUC values did
 show differences between models, the model could perhaps benefit from
 some additional predictors. However, the reduced models still
 demonstrated acceptable class discrimination.
 
-Single hold-out cross-validation stood out the most as having the worst
+## Conclusion (cont.)
+
+Single hold-out CV stood out the most as having the worst
 performance, with MSE values that were significantly higher than that of
 the rest of the techniques. This result indicates that this technique
 will not always be the best route to take when trying to validate a
