--- a/references.bib
+++ b/references.bib
@@ -266,3 +266,10 @@
   year={2015},
   publisher={Academy \& Industry Research Collaboration Center (AIRCC)}
 }
+@misc{ROC_2024, 
+  title={How to explain the ROC curve and ROC AUC score?},
+  url={https://www.evidentlyai.com/classification-metrics/explain-roc-curve},
+  journal={Evidently AI},
+  year={2024},
+  month={Apr}
+  }
